--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -78,7 +78,7 @@
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.associatedPerson.firstName">Anon</span>
+              <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.firstName">Anon</span>
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
@@ -333,7 +333,7 @@
         </thead>
         <tbody class="account-list" th:remove="all-but-first">
           <tr th:each="account : ${accounts}">
-            <td class="col-md-2 person" th:text="|${account.associatedPerson.firstName} ${account.associatedPerson.lastName}|">Franzi Freundlich</td>
+            <td class="col-md-2 person" th:text="|${account.firstName} ${account.lastName}|">Franzi Freundlich</td>
             <td class="col-md-2 username" th:text="${account.username}">franzi</td>
             <td class="col-md-2 roles" data-roles="ROLE_JUBIREF" th:attr="data-roles=${{#iterables.join(account.authorities)}}" th:remove="all-but-first">
               <span class="label label-default" th:each="auth: ${account.authorities}" th:text="${auth.authority}">ROLE_EMPLOYEE</span>
