--- a/src/main/resources/templates/overview.html
+++ b/src/main/resources/templates/overview.html
@@ -83,7 +83,7 @@
               </li>
               <li class="dropdown active">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                  <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.associatedPerson.firstName">Tom</span>
+                  <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.firstName">Tom</span>
                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
