--- a/src/main/resources/templates/persons.html
+++ b/src/main/resources/templates/persons.html
@@ -76,7 +76,7 @@
                 </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                    <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.associatedPerson.firstName">Anon</span>
+                    <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.firstName">Anon</span>
                     <span class="caret"></span>
                   </a>
                   <ul class="dropdown-menu">
@@ -474,6 +474,12 @@
                                         </select>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="filter-persons-events" class="col-sm-3 control-label">Veranstaltungen</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="participatedEventName" class="form-control" id="filter-persons-events" placeholder="Veranstaltungsnamen" th:field="*{participatedEventName}" />
                             </div>
                         </div>
                         <hr />
