--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -77,7 +77,7 @@
           </li>
           <li class="dropdown active">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-              <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.associatedPerson.firstName">Anon</span>
+              <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.firstName">Anon</span>
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
