--- a/src/main/resources/templates/personDetails.html
+++ b/src/main/resources/templates/personDetails.html
@@ -75,7 +75,7 @@
               </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                  <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.associatedPerson.firstName">Anon</span>
+                  <span class="glyphicon glyphicon-user"></span> <span sec:authentication="principal.firstName">Anon</span>
                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
@@ -255,7 +255,7 @@
                           <label class="col-sm-2 control-label">Allgemein</label>
                           <div class="col-sm-10">
                               <div class="checkbox">
-                                 <label><input type="checkbox" name="is-activist" id="edit-activist-isActivist" th:field="*{activist}"/> die Person ist ein Aktiver</label>
+                                 <label><input type="checkbox" name="is-activist" id="edit-activist-isActivist" th:field="*{activist}" th:attr="disabled=*{activist}" /> die Person ist ein Aktiver</label>
                              </div>
                          </div>
                      </div>
