--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -420,8 +420,16 @@
 
             </section>
 
+            <section class="row" th:if="${ {#iterables.isEmpty(currentEvents)} and {#iterables.isEmpty(futureEvents)} }">
+              <div class="container text-center">
+                <div class="alert alert-info">
+                  Hmm zur Zeit scheint nichts los zu sein...
+                </div>
+              </div>
+            </section>
+
             <!-- current events -->
-            <section class="row" th:if="${normalDisplay}">
+            <section class="row" th:if="${normalDisplay and not {#iterables.isEmpty(currentEvents)}}">
                 <h2>Laufende Veranstaltungen</h2>
                 <table id="current-events" class="table table-striped table-hover tablesorter">
                     <thead>
@@ -460,7 +468,7 @@
             </section>
 
             <!-- future events -->
-            <section class="row" th:if="${normalDisplay}">
+            <section class="row" th:if="${normalDisplay and not {#iterables.isEmpty(futureEvents)}}">
                 <h2>Kommende Veranstaltungen</h2>
                 <table id="prospective-events" class="table table-striped table-hover tablesorter">
                     <thead>
