Fix typo in method reference

--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -367,7 +367,7 @@
       </div>
   </div>
 
-  <div class="modal fade" id="release-notes-modal" tabindex="-1" th:if="${releaseNotes}" sec:authorize="!getPrincipal().hasReadReleaseNotes()">
+  <div class="modal fade" id="release-notes-modal" tabindex="-1" th:if="${releaseNotes}" sec:authorize="!getPrincipal().hasReadRealeaseNotes()">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
